5.0.2 Add new unit tests & Code quality improvement